Starting work on web site redo

--- a/servlet/src/main/java/edu/uiuc/ncsa/security/servlet/mail/package.html
+++ b/servlet/src/main/java/edu/uiuc/ncsa/security/servlet/mail/package.html
@@ -39,9 +39,9 @@ for Java Mail.
             messages, preconfigured to connect to the appropriate
             SMTP server.
         &lt;/description&gt;
-        &lt;res-ref-name>mail/Session&lt;/res-ref-name&gt;
-        &lt;res-type>javax.mail.Session&lt;/res-type&gt;
-        &lt;res-auth>Container&lt;/res-auth&gt;
+        &lt;res-ref-name&gt;mail/Session&lt;/res-ref-name&gt;
+        &lt;res-type&gt;javax.mail.Session&lt;/res-type&gt;
+        &lt;res-auth&gt;Container&lt;/res-auth&gt;
    &lt;/resource-ref&gt;
         </PRE>
     </LI>
