Update before travel.

--- a/website/src/site/xhtml/alt-index.xhtml
+++ b/website/src/site/xhtml/alt-index.xhtml
@@ -12,6 +12,8 @@
 <!--#include virtual="../header.html"-->
 <h2>Components</h2>
 <p><a title="Store command Reference" href="store_commands/index.html">Store Commands</a></p>
+<p><a title="Upkeep reference" href="../pdf/upkeep.pdf">Store upkeep facility reference.</a></p>
+<p><a title="SAS reference" href="../pdf/SAS-protocol.pdf">SAS Protocol reference.</a></p>
 
 <!--#include virtual="../footer.html" -->
 </body>
