https://github.com/ncsa/security-lib/issues/61, added index,html page for PDFs. Tweaked a lot of help.

--- a/website/src/site/xhtml/alt-index.xhtml
+++ b/website/src/site/xhtml/alt-index.xhtml
@@ -4,17 +4,14 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-    <title>NCSA Security Libraries</title>
-    <!--#include virtual="../head.html" -->
+    <title>The NCSA Security Library</title>
 </head>
 
 <body class="composite">
-<!--#include virtual="../header.html"-->
-<h2>Components</h2>
+<h2>Projects in the Security Library</h2>
 <p><a title="Store command Reference" href="store_commands/index.html">Store Commands</a></p>
 <p><a title="Upkeep reference" href="../pdf/upkeep.pdf">Store upkeep facility reference.</a></p>
 <p><a title="SAS reference" href="../pdf/SAS-protocol.pdf">SAS Protocol reference.</a></p>
 
-<!--#include virtual="../footer.html" -->
 </body>
 </html>
